# TradingCharlie

./: .cursorcontext.json  .gitignore  2509.11420v1.txt  ALL_FIXES_APPLIED.md  API_TIER_LIMITATIONS_FIX.md  COMPLETE_FIX_SUMMARY.md  FINAL_STATUS.md  FMP_API_MIGRATION_FINDINGS.md  IDEMPOTENCY_FIX.md  METAFLOW_FIXES.md  METAFLOW_JOIN_FIX.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  RUNNING_THE_PIPELINE.md  SETUP_COMPLETE.md  SQL_TYPE_CAST_FIX.md  UPSERT_AND_PANDAS_FIX.md  api_failure_investigation_report.md  charlie.ddl  charlie_fetchers.py  charlie_tr1_flow.py  charlie_utils.py  data_flow_design.md  enhance.md  example_sources_meta.json  pyproject.toml  run_test.sh  test_fmp_api.py  test_fmp_new_api.py  test_updated_fetcher.py  twitter_api_info.md
.cursor/.agent-tools/: 12e510b0-3a05-4db7-af20-1961b3cbf834.txt  31519083-2572-4844-845d-9e40a2107927.txt  32dcccbb-0fd4-439d-a6ab-c9090bd2e348.txt  3ac161b5-f4f0-4079-b0e9-e5fc87a42282.txt  85edd9af-733e-4c60-ab5a-baf3fbd4e5a9.txt  91a0a05d-94fb-4043-aaa4-e9132ad8ad00.txt  b30c4121-95dd-42c3-b308-9789ec1958af.txt  ca726f2a-4998-4906-b081-86a076624cac.txt  eb35ca6d-d575-43e1-a44c-d089e2677c16.txt
.metaflow/CharlieTR1Pipeline/: latest_run
.metaflow/CharlieTR1Pipeline/1760930904895747/_meta/: _self.json
.metaflow/CharlieTR1Pipeline/1760930904895747/_parameters/0/: 0.attempt.json  0.data.json
.metaflow/CharlieTR1Pipeline/1760930904895747/_parameters/_meta/: _self.json
.metaflow/CharlieTR1Pipeline/_meta/: _self.json
scripts/: clean_all.sh  init_charlie_db.sql  init_db.sh  migrate_m1_m5.sql  run_pipeline.sh  verify_setup.sh
tests/: api_validation.py  test_charlie_pipeline.py  test_insider_paths.py  test_stable_api.py  test_updated_fetcher.py
(+584 files in other folders)
