[project]
name = "charlie-tr1-db"
version = "0.1.0"
description = "Multi-modal financial forecasting dataset pipeline using Metaflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core pipeline
    "metaflow>=2.11.0",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",

    # Data processing
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "fastparquet>=2023.0.0",

    # API clients
    "yfinance>=0.2.40",
    "requests>=2.31.0",
    "fredapi>=0.5.0",
    "finnhub-python>=2.4.0",
    "google-search-results>=2.4.2",

    # Technical analysis
    "ta>=0.11.0",

    # Utilities
    "python-dateutil>=2.8.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",

    # HTML/text processing
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "html5lib>=1.1",

    # Optional LLM integration
    "openai>=1.0.0",
    "anthropic>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# We don't have a package directory, just scripts
packages = []

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=. --cov-report=term-missing"
